--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "license": "ISC",
     "dependencies": {
       
-      "mongoose": "^6.3.1"
+      "mongoose": "^6.3.1",
+      "express": "^4.17.3"
       
     }
   }
