--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "dependencies": {
       
       "mongoose": "^6.3.1",
-      "express": "^4.17.3"
+      "express": "^4.17.3",
+      "dotenv": "^16.0.0"
       
     }
-  }
+    }
   
